--- a/nginx.conf
+++ b/nginx.conf
@@ -13,22 +13,25 @@ map $arg_q $dest {
     ~*(?i)\b(explain|describe|compare|define)\b      chatgpt;
     # explicit wiki keywords
     ~*(?i)\bwikipedia\b|\bwiki\b                     wikipedia;
-{{- range .CustomKeywords }}
-    ~*(?i)^{{ escape .Phrase }}$                {{ .Dest }};
-{{- end }}
+    ~*(?i)^nginx$                wikipedia;
+    ~*(?i)^New\ York$                wikipedia;
+    ~*(?i)^openai$                wikipedia;
+    ~*(?i)^cat\ pictures$                google_images;
     default                                          google;
 }
 
 # Map engine names to full URL targets. Update this list in Go.
 map $dest $target {
-{{- range $name, $url := .Targets }}
-    {{ $name }} {{ $url }};
-{{- end }}
+    chatgpt https://chatgpt.com/?q=$arg_q;
+    google https://www.google.com/search?q=$arg_q;
+    google_images https://www.google.com/search?tbm=isch&q=$arg_q;
+    google_maps https://www.google.com/maps/search/?q=$arg_q;
+    wikipedia https://en.wikipedia.org/wiki/$arg_q;
 }
 
 server {
-    listen {{ .Listen }};
-    server_name {{ .ServerName }};
+    listen 80;
+    server_name search.localhost;
 
     location / {
         return 302 $target;
