Add tests for ChatGPT routing regex

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,10 +7,25 @@ map $arg_q $dest {
     ~*(?i)\b(near\s+me|directions?\s+to|map\s+of)\b  google_maps;
     # Wikipedia lookups
     ~*(?i)\b(?:biography|history|life\s+of)\b        wikipedia;
-    # question detection
-    ~*(?i)\b(who|what|when|where|why|how|can|could|would|should|do|did|is|are|was|were|am|will|whom|whose|which)\b chatgpt;
-    # instructional queries
-    ~*(?i)\b(explain|describe|compare|define)\b      chatgpt;
+    # ChatGPT queries
+    ~*(?i)^(add|allow|appear|ask|begin|believe|bring|build|buy|call)\b chatgpt;
+    ~*(?i)^(change|come|consider|create|cut|do|fall|feel|find)\b chatgpt;
+    ~*(?i)^(follow|forgive|generate|get|give|go|grow|have|hear|help)\b chatgpt;
+    ~*(?i)^(include|keep|kill|know|learn|leave|let|like|live|look)\b chatgpt;
+    ~*(?i)^(lose|love|make|mean|meet|move|offer|open|pay|play)\b chatgpt;
+    ~*(?i)^(provide|put|read|reach|remain|remember|send|serve|set)\b chatgpt;
+    ~*(?i)^(show|sit|speak|spend|stand|start|stay|stop|succeed|take)\b chatgpt;
+    ~*(?i)^(talk|tell|think|try|turn|understand|use|watch|work)\b chatgpt;
+    ~*(?i)^(write|what|how|why|when|where|who|which|whose|will)\b chatgpt;
+    ~*(?i)^(would|can|could|should|might|must|may|does|did|are|is)\b chatgpt;
+    ~*(?i)^(was|were|am|i|we|team|explain|list|compare|contrast)\b chatgpt;
+    ~*(?i)^(summarize|translate|define|describe|recommend|analyze)\b chatgpt;
+    ~*(?i)^(evaluate|outline|plan|design|develop|propose|edit)\b chatgpt;
+    ~*(?i)^(improve|fix|optimize|assist|research|brainstorm|suggest)\b chatgpt;
+    ~*(?i)^(solve|calculate|interpret|categorize|classify|format)\b chatgpt;
+    ~*(?i)^(style|proofread|review|listen|plot|graph|chart|map)\b chatgpt;
+    ~*(?i)^(diagram|simulate|predict|forecast|estimate|answer|reply)\b chatgpt;
+    ~*(?i)^(respond|inquire|query|request|discuss)\b                 chatgpt;
     # explicit wiki keywords
     ~*(?i)\bwikipedia\b|\bwiki\b                     wikipedia;
     ~*(?i)^nginx$                wikipedia;
